adding in minutes in typo

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-w<!doctype html>
+<!doctype html>
 <html>
 
 <head>
@@ -72,7 +72,7 @@ w<!doctype html>
                     <h3>Ear Hustle: Season 1 Episode 1</h3>
                     <hr>
                     <a href="">
-                        <p>Cellies: start at 112s and at 640s</p>
+                        <p>Cellies: start at 112s and at 6m40s</p>
                     </a>
                 </section>
                 <section>
