adding second session

--- a/index.html
+++ b/index.html
@@ -219,11 +219,67 @@
             </section>
 
             <section>
+                <section>
+                    <h1>Session 2 🦹🏻‍♀️👩🏽‍💻🤖</h1>
+                    <hr>
+                    <p>Person Cards, Voxpop Episodes</p>
+                </section>
+
+                <section>
+                    <h3>Personcard Example and Goals</h3>
+                    <hr>
+                    <ul>
+                        <li>We're going to make your person cards <i>real</i> by making the images and coding them:)</li>
+                        <li><a href="https://codepen.io/mojopi/pen/wvwPjpL">My current person card</a></li>
+                    </ul>
+                </section>
+
+                <section>
+                     <h3>Personcard "Workflow"</h3>
+                    <hr>
+                    <ol>
+                        <li class="fragment">Create your personcard images</li>
+                        <li class="fragment">Label them "FirstnameLastname1.jpg" and "FirstnameLastname2.jpg"
+                        <li class="fragment">Upload them to <a href="https://drive.google.com/drive/folders/17XDCV2Lxcmq4Fl8WW-QlG8WEeuSxa9dC">bit.ly/ttlworkwonderimages</a></li>
+                        <li class="fragment">Go to codepen.io, create sign in</li>
+                        <li class="fragment">FORK this card at <a href="https://codepen.io/mojopi/pen/wvwPjpL">bit.ly/mollypersoncard</a></li>
+                        <li class="fragment">(While you're doing that, MJ uploads all images to Amazon <a href="https://s3.console.aws.amazon.com/s3/buckets?region=us-west-2">s3 here</a>)</li>
+                        <li class="fragment">Let's code your cards together!</li>
+                    </ol>
+                </section>
+
+                <section>
+                    <h3>Your first VoxPop episodes</h3>
+                    <hr>
+                    <p>Our first episodes will have two parts:</p>
+                    <p class="fragment">scenes / contributions</p>
+                    <p class="fragment">narration / interludes</p>
+                </section>
+
+                <section>
+                    <h3>Sailors First Episode</h3>
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/6icagnLEykc4CamuSqDpei?utm_source=generator" width="100%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+
+                </section>
+
+                <section>
+                    <h3>What is your first Vox Pop Topic?</h3>
+                    <hr>
+                    <p>go to <a href="https://drive.google.com/drive/folders/1i2niIaWQEI2X8rpZahAAzZFnV1YGHth-">bit.ly/ttlworkwonder</a> and go into your folders and your "crib sheet" to brainstorm</p>
+                </section>
+
+                <section>
+                    <h2>Break</h2>
+                </section>
+
+                <section>
+                    <h2>Brainstorming Norms</h2>
+                </section>
                 
             </section>
             <section>
                 <section>
-                    <h1>Session 2:</h1>
+                    <h1>Session 3:</h1>
                     <hr>
                     <h3>Sharing your stories</h3>
                     <p><a href="https://docs.google.com/document/d/1c6vEuTgrC9F-fBVtk6HLV7nAepZ2omPGWmmwCuTuweg/edit#">topics</a> & <a href="https://docs.google.com/document/d/1JX-Dwlh6Jn88TGYI2KLDT5p_QTD288L9I5K9cZnj1yc/edit">Today's Talk</a>& <a href="https://drive.google.com/drive/folders/1NJyGYFfi1zkgx7X8Q14V4_78QhUI8JyJ">gfolder</a>
@@ -417,6 +473,10 @@
                     <a href="http://youtube2mp3.cc/">youtube</a> & <a href="https://freesound.org">free sounds</a> & <a href="https://freemusicarchive.org/">Music</a>
                 </section>
             </section>
+
+
+
+
         </div>
     </div>
     <script src="dist/reveal.js"></script>
