--- a/index.html
+++ b/index.html
@@ -279,7 +279,89 @@
             </section>
             <section>
                 <section>
-                    <h1>Session 3:</h1>
+                    <h2>Session 3 🎤🫣</h2>
+                    <hr>
+                    <h3>Working on our fist vox pop episode</h3>
+                </section>
+                <section>
+                    <h3>Reviewing your first vox pop topics</h3>
+                    <hr>
+                    <p>go to <a href="https://drive.google.com/drive/folders/1i2niIaWQEI2X8rpZahAAzZFnV1YGHth-">bit.ly/ttlworkwonder</a> and go into your folders and your "crib sheet" to brainstorm</p>
+                </section>
+                <section>
+                    <h3>Norms in Dialogue Groups</h3>
+                    <hr>
+                    <p class="fragment"><a href="https://asana.com/resources/group-norms-examples">What are norms</a>?</p>
+                   <p class='fragment'>thoughts?</p>
+                </section>
+
+                <section>
+                    <h3>Conversation Norms I brainstormed...</h3>
+                    <hr>
+        <ul style="font-size:16px;">
+            <li>Share only what you feel comfortable sharing.</li>
+            <li>When you share, share from the heart & share your own experience.<li>
+            <li> Tell “I” stories, not “you” stories or stories about other people outside the group.</li>
+            <li>Actively listen without interruption.</li>
+<li>In this space, being cool is less cool than being present to yourself and others.</li>
+<li>Keep stories anonymous of the people in them.</li>
+<li>Silence is OK. Before moving on from a topic, ask if everyone who wants to share, has shared. Then ask a new, follow-up question.</li>
+</ul>
+</section>
+
+                <section>
+                    <h3>Recording on phone for individual recordings & group discussion</h3>
+                    <hr>
+                    <p>mj demo</p>
+                </section>
+
+                <section>
+                    <h4>Breakout Room 1</h4>
+                    <hr> 
+                        <ol>
+                            <li>First Impressions — what are you nervous about? (Erika)</li>
+                            <br><br>
+                              <li> Doubts on dreams (Jonathan)</li>
+                            <li>Dealing w loneliness (Leon)</li>
+                            <li>Finding your Style(Haleigh)</li>
+                            <li>Impact of online learning(Amber)
+                    </ol>
+
+                </section>
+
+                <section>
+                   <h4>Breakout Room 2</h4>
+                   <hr>
+                     <ol>
+                        <li>Relationship to Homework (Clarissa)
+                        <li>Your vs. older generations relationship and idea about mental health (Karen)
+                        <li>What does toxic mean and what do we do with it? How use it in relationships? (Zyan)</li>
+                        <li>Bullying (Anthony) 
+                        </li>
+                        <li>Anxieties/thoughts/decisions about college (Tigran)</li>
+                </section>
+
+
+
+                
+
+<section>
+    <h3>Installing Audacity on Mac or PC</h3>
+    <hr>
+    <p>For Mac and PC, go to <a href="https://www.audacityteam.org/download/">audacity.org/download</a>
+</section>
+
+<section>
+    <a href="https://podnews.net/article/installing-audacity-on-chromebook"><h3>How to install audacity on chrome book</h3></a>
+    <hr>
+    <iframe width="640" height="360" src="https://www.youtube.com/embed/ZsN4YAT0ar0" title="How to Install Audacity on Chromebook" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</section>
+
+
+</section>
+</section>
+                <section>
+                    <h1>Session 4?:</h1>
                     <hr>
                     <h3>Sharing your stories</h3>
                     <p><a href="https://docs.google.com/document/d/1c6vEuTgrC9F-fBVtk6HLV7nAepZ2omPGWmmwCuTuweg/edit#">topics</a> & <a href="https://docs.google.com/document/d/1JX-Dwlh6Jn88TGYI2KLDT5p_QTD288L9I5K9cZnj1yc/edit">Today's Talk</a>& <a href="https://drive.google.com/drive/folders/1NJyGYFfi1zkgx7X8Q14V4_78QhUI8JyJ">gfolder</a>
